# Carina-mirror

./: .gitignore  .gitmodules  CMakeLists.txt  Carina.pro  CleanGSUI.pro  Dockerfile  GSUI_CleanArchitecture.pro  README.md  Tests.pro  cold_flow.json  common_settings.pri  controllers.cpp  controllers.h  currentState.ui  default_logger.conf  entities.cpp  entities.h  gateways.cpp  gateways.h  gsui.ui  layer3.cpp  layer3.cpp.autosave  layer3.h  main.cpp  presenters.cpp  presenters.h  src.pri  tests_main.cpp  usecases.cpp  usecases.h  userinterface.cpp  userinterface.h  userinterface.ui
.github/workflows/: automatic_gtest.yml  build.yml  build_and_test.yml  make_release.yml  release.yml  unit_tests.yml
app/: app.pro  main.cpp
dependencies/: Adafruit_PWMServoDriver.cpp  Adafruit_PWMServoDriver.h  Helpers.cpp  Helpers.h  MCCDAQHandler.cpp  MCCDAQHandler.h  dependencies.pri  easylogging++.h
src/: ProcessManager.cpp  ProcessManager.h  main.cpp  src.pri  src.pro
src/L1/: L1.pri
src/L1/entities/: Actuator.cpp  Actuator.h  Process.cpp  Process.h  Sensor.cpp  Sensor.h  State.h
src/L2/: L2.pri
src/L2/services/: ClocksModule.cpp  ClocksModule.h  easylogging++.h
src/L2/usecases/: ActuatorsManager.cpp  ActuatorsManager.h  ProcessManager.cpp  ProcessManager.h  SensorsManager.cpp  SensorsManager.h  StatesManager.cpp  StatesManager.h
src/L3/: L3.pri
src/L3/controllers/: ActuatorsController.cpp  ActuatorsController.h  ProcessController.cpp  ProcessController.h  StatesController.cpp  StatesController.h
src/L3/gateways/: ActuatorStatusGateway.h  ProcessFileParser.cpp  ProcessFileParser.h  ProcessGateway.cpp  ProcessGateway.h  SensorValuesGateway.cpp  SensorValuesGateway.h
src/L3/presenters/: ActuatorsPresenter.cpp  ActuatorsPresenter.h  ProcessPresenter.cpp  ProcessPresenter.h  SensorsPresenter.cpp  SensorsPresenter.h  StatesPresenter.cpp  StatesPresenter.h
src/L4/: L4.pri
src/L4/control/: AbstractActuator.cpp  AbstractActuator.h  Adafruit_PWMServoDriver.cpp  Adafruit_PWMServoDriver.h  ConcreteActuatorFactory.cpp  ConcreteActuatorFactory.h  DummyActuator.cpp  DummyActuator.h  PCA9685Actuator.cpp  PCA9685Actuator.h  SolenoidActuator.cpp  SolenoidActuator.h  SolenoidAcutator.h
src/L4/daq/: DAQPlaceHolder.cpp  DAQPlaceHolder.h
src/L4/dataacquisition/: AD799xDAQ.cpp  AD799xDAQ.h  AbstractDAQ.cpp  AbstractDAQ.h  AbstractDAQDeviceHandler.h  AiDAQHandler.cpp  AiDAQHandler.cpp.autosave  AiDAQHandler.h  AiMCCDAQ.cpp  AiMCCDAQ.h  AnalogMCCDAQSensor.cpp  AnalogMCCDAQSensor.h  ArduinoHandler.cpp  ArduinoHandler.h  ConcreteSensorFactory.cpp  ConcreteSensorFactory.h  DAQDeviceHandler.h  DAQHandler.cpp  DAQHandler.h  DAQManager.cpp  DAQManager.h  DAQPlaceHolder.cpp  DAQPlaceHolder.h  DummyDAQ.cpp  DummyDAQ.h  DummySensor.cpp  DummySensor.h  I2CDAQ.cpp  I2CDAQ.h  IDAQDeviceHandler.h  OneWireDAQ.cpp  OneWireDAQ.h  SerialPortDAQ.cpp  SerialPortDAQ.h  SerialPortHandler.cpp  SerialPortHandler.h
src/L4/ui/: DAQManagerFactory.cpp  DAQManagerFactory.h  DAQManagerFactory.ui  Draggable.h  ErrorUIHandler.cpp  ErrorUIHandler.h  GSMainWindow.ui  GSMainWindowHandler.cpp  GSMainWindowHandler.h  GSManager.cpp  GSManager.cpp.autosave  GSManager.h  MovableQLabel.cpp  MovableQLabel.h  MovableQPushButton.cpp  MovableQPushButton.h  ProcessUIHandler.cpp  ProcessUIHandler.h  RecalibrationWindow.cpp  RecalibrationWindow.h  RecalibrationWindow.ui  SensorToDAQLinker.cpp  SensorToDAQLinker.h  SensorToDAQLinker.ui  State.ui  StateUIHandler.cpp  StateUIHandler.h  SystemDiagramUIHandler.cpp  SystemDiagramUIHandler.h  SystemDiagramUIhandler.cpp  SystemDiagramUIhandler.h  UIHelpers.h  daqmanagerfactory.ui  error.ui  gsmainwindow.ui  state.ui  systemdiagram.ui
src/L4/ui/DAQManagerConfiguration/: DAQCalibrationDialog.cpp  DAQCalibrationDialog.h  DAQCalibrationDialog.ui  DAQLinkDialog.cpp  DAQLinkDialog.h  DAQLinkDialog.ui  DAQScanDialog.cpp  DAQScanDialog.h  DAQScanDialog.ui
src/L4/ui/DAQManagerWizard/: DAQCalibrationDialog.cpp  DAQCalibrationDialog.h  DAQCalibrationPage.cpp  DAQCalibrationPage.h  DAQLinkDialog.h  DAQLinkingPage.cpp  DAQLinkingPage.h  DAQManagerWizard.cpp  DAQManagerWizard.h  DAQScanDialog.cpp  DAQScanDialog.h  DAQScanPage.cpp  DAQScanPage.h  DAQScanPage.ui
src/adapters/controllers/: ActuatorController.h  ActuatorsController.cpp  ActuatorsController.h  ProcessController.cpp  ProcessController.h  SensorsController.cpp  SensorsController.h  actuatorsController.cpp  controllers.cpp  controllers.h  processController.cpp
src/adapters/gateways/: ActuatorStatusGateway.cpp  ProcessGateway.cpp  ProcessGateway.h  SensorValuesGateway.cpp  SensorValuesGateway.h  gateways.h  processGateway.cpp
src/adapters/presenters/: ProcessPresenter.cpp  ProcessPresenter.h  presenters.cpp  presenters.h  processPresenter.cpp
src/entities/: Actuator.cpp  Actuator.h  Sensor.h  State.h  entities.cpp  entities.h
src/usecases/: ActuatorsManager.cpp  ActuatorsManager.h  ProcessManager.cpp  ProcessManager.h  SensorsManager.cpp  SensorsManager.h  actuatorsManager.cpp  processManager.cpp  sensorsManager.cpp  usecases.cpp  usecases.h
tests/: CMakeLists.txt  gtest_dependency.pri  main.cpp  test_Actuator.h  test_ActuatorsManager.h  tests.pro  tests_main.cpp  tst_Actuator.h  tst_ActuatorsManager.h  tst_Sensor.h  tst_basicproperties.h
